reserva ampliado admin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -139,6 +139,14 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".Activity_reserva_ampliado_admin"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".Activity_reservas_chef"
             android:exported="true">
             <intent-filter>
